# langextract-bedrock

./: .gitignore  .kata.toml  .roborev.toml  CLAUDE.md  README.md  pyproject.toml  test_plugin.py
.github/workflows/: ci.yml  publish-codeartifact.yml  python-publish.yml
langextract_bedrock/: __init__.py  provider.py  schema.py
langextract_bedrock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_converse.py  test_extract.py  test_provider.py  test_schema.py  utils.py
