[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-bedrock-strata"
version = "0.1.5"
description = "LangExtract provider plugin for AWS Bedrock (Strata Analytics fork)"
authors = [{name = "Santiago Murgueitio", email = "santiago.murgueitio@strata-analytics.us"}]
maintainers = [{name = "Santiago Murgueitio", email = "santiago.murgueitio@strata-analytics.us"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",–---
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.40.9",
    "langextract>=1.1.1"
]

[project.entry-points."langextract.providers"]
bedrock = "langextract_bedrock.provider:BedrockLanguageModel"

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_bedrock*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "build>=1.0.0",
    "twine>=5.0.0",
]
